syntax = "proto3";

package auth;

message AuthResponse { optional string token = 2; }

message AuthRequest {
  string ocid = 1;
  string password = 2;
}